--- a/Mapkit_ShapeFile/Base.lproj/Main.storyboard
+++ b/Mapkit_ShapeFile/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HUX-oR-33J">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -42,16 +42,20 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="bEi-Iu-rfM"/>
                                 </items>
                             </toolbar>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bvo-hJ-dl2">
-                                <rect key="frame" x="136" y="457" width="51" height="31"/>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="i09-z3-poL">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="gxk-aE-zWt">
+                            <switch key="customView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="Bvo-hJ-dl2">
+                                <rect key="frame" x="255" y="6" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="randomColorValueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="RDl-PI-0gh"/>
                                 </connections>
                             </switch>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="XIX-mh-xS4" id="YI1-p6-Xcx"/>
                         <outlet property="randomSwitch" destination="Bvo-hJ-dl2" id="y7f-JD-QwV"/>
@@ -60,6 +64,65 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="635" y="-224"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tAR-Jm-REP">
+            <objects>
+                <viewController id="kSc-ew-i4B" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GcU-vD-nYx"/>
+                        <viewControllerLayoutGuide type="bottom" id="lXZ-4l-KnS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JWe-Du-e8H">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CQk-Qd-sLT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8" y="-938"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="K2e-ar-YcJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="He4-gW-Doz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="X4v-Cc-yAb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="Po0-LH-gN8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zsn-1Q-pZA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8" y="-224"/>
+        </scene>
+        <!--Drawer Controller-->
+        <scene sceneID="dDd-oZ-agH">
+            <objects>
+                <viewController id="HUX-oR-33J" customClass="MMDrawerController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VXi-qh-Hlz"/>
+                        <viewControllerLayoutGuide type="bottom" id="Mdv-K2-bgP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="38t-Qc-aje">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="He4-gW-Doz" kind="custom" identifier="mm_center" customClass="MMDrawerControllerSegue" id="7gA-0T-ryI"/>
+                        <segue destination="kSc-ew-i4B" kind="custom" identifier="mm_left" customClass="MMDrawerControllerSegue" id="tXa-k4-XfX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LqM-J6-i5w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-603" y="-282"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
